Updated notebook for EventDisplay comparison

--- a/notebooks/comparison_with_EventDisplay.ipynb
+++ b/notebooks/comparison_with_EventDisplay.ipynb
@@ -59,9 +59,12 @@
    "source": [
     "## Table of contents\n",
     "\n",
-    "* [Input data](#Input-data)\n",
-    "    - [Requirements](#Requirements)\n",
-    "        + [B-TEL-1010 \"Intensity Resolution\"](#B-TEL-1010-\"Intensity-Resolution\")"
+    "* [IRFs](#IRFs)\n",
+    "    - [Effective area](#Effective-area)\n",
+    "    - [Angular resolution](#Angular-resolution)\n",
+    "    - [Energy resolution](#Energy-resolution)\n",
+    "    - [Background rate](#Background-rate)\n",
+    "* [Differential sensitivity](#Differential-sensitivity)"
    ]
   },
   {
