--- a/notebooks/comparison_with_EventDisplay.ipynb
+++ b/notebooks/comparison_with_EventDisplay.ipynb
@@ -42,7 +42,11 @@
     "\n",
     "**Notes:**\n",
     "\n",
-    "Only the _on-axis 50 h_ case is taken into account for the moment.\n",
+    "The following results correspond to:\n",
+    "\n",
+    "- Paranal site\n",
+    "- Zd 20 deg, Az 180 deg\n",
+    "- 50 h observation time\n",
     "\n",
     "**Resources:**\n",
     "\n",
@@ -50,7 +54,7 @@
     "\n",
     "**TO-DOs:**\n",
     "\n",
-    "- .."
+    "- ..."
    ]
   },
   {
@@ -192,8 +196,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following is the current IRF + sensititivy output FITS format provided by this software."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 70,
    "metadata": {
     "tags": [
      "parameters"
@@ -357,9 +368,9 @@
     "- the configuration in config.yaml,\n",
     "- the specific cuts optiization performed by EventDisplay (which has not yet been replicated in pyirf)\n",
     "\n",
-    "This comparison is here to make sure that we can produce the output and use it to play a bit.\n",
+    "This comparison is here to make sure that we can produce a reliable and stable output and use it to proceed with the development.\n",
     "\n",
-    "A more detailed and complete version will be provided with the DL3 benchmarking."
+    "A more detailed and complete version of this notebook will be provided with an official DL3 benchmarking."
    ]
   },
   {
@@ -667,7 +678,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
    "source": [
     "## Close FITS files"
    ]
