--- a/docs/contribute/comparison_with_EventDisplay.ipynb
+++ b/docs/contribute/comparison_with_EventDisplay.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {
     "tags": [
      "parameters"
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {
     "tags": [
      "parameters"
@@ -254,12 +254,19 @@
     "nbsphinx": "hidden"
    },
    "source": [
-    "Until _pyirf_ will support the latest version of _gammapy_ ( currently it is still using the old 0.8 version used by _protopipe_ ) we read its output manually (i.e. without using the classes provided by _gammapy_, like e.g. `EffectiveAreaTable`"
+    "It is possible to extract data from pyirf FITS file with different approaches, e.g.\n",
+    "\n",
+    "- using *gammapy*, by reading the file HDUs into the appropriate IRF class like `EffectiveAreaTable2D` or `EnergyDispersion2D`\n",
+    "- opening the FITS file manually and reading data through the *astropy.fits* module as e.g. `BinTableHDU`\n",
+    "\n",
+    "The *gammapy* solution seems to be cleaner, but it means that we depend on this specific science tool for plotting. This is not bad per-se, but we could need a more elastic approach for now, given that e.g. we do not yet work on full-enclosure IRFs and the offset handling in *gammapy* is hard-coded in its plotting methods.\n",
+    "\n",
+    "To produce the following plots I use a mix of these two approaches as example, but it is possible to open and plot data by using consistently each of the two."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -311,6 +318,8 @@
    ],
    "source": [
     "# Energy dispersion\n",
+    "\n",
+    "# here I open manually, but I use gammapy.irf.EnergyDispersion2D to get the energy resolution\n",
     "\n",
     "eDisp_pyirf = hdul_pyirf[3]\n",
     "\n",
@@ -330,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
