--- a/docs/contribute/comparison_with_EventDisplay.ipynb
+++ b/docs/contribute/comparison_with_EventDisplay.ipynb
@@ -160,8 +160,8 @@
    "outputs": [],
    "source": [
     "# Path of the required input data in the user's local setup\n",
-    "# Please, empty these variables before pushing to the repo!\n",
-    "indir_EventDisplay = \"/Users/michele/Applications/ctasoft/tests/pyirf/EventDisplay/IRFs/data/WPPhys201890925LongObs\"\n",
+    "# Please, empty the indir_EventDisplay variable before pushing to the repo\n",
+    "indir_EventDisplay = \"\"\n",
     "infile_EventDisplay = \"DESY.d20180113.V3.ID0_180degNIM2LST4MST4SST4SCMST4.prod3b-paranal20degs05b-NN.S.3HB9-FD.180000s.root\"\n",
     "\n",
     "input_EventDisplay = uproot.open(f'{indir_EventDisplay}/{infile_EventDisplay}')"
