--- a/notebooks/comparison_with_EventDisplay.ipynb
+++ b/notebooks/comparison_with_EventDisplay.ipynb
@@ -159,7 +159,7 @@
    },
    "outputs": [],
    "source": [
-    "# Path of the required input data in the user's local setup\n",
+    "# Path of EventDisplay IRF data in the user's local setup\n",
     "# Please, empty the indir_EventDisplay variable before pushing to the repo\n",
     "indir_EventDisplay = \"\"\n",
     "infile_EventDisplay = \"DESY.d20180113.V3.ID0_180degNIM2LST4MST4SST4SCMST4.prod3b-paranal20degs05b-NN.S.3HB9-FD.180000s.root\"\n",
@@ -230,7 +230,9 @@
     }
    ],
    "source": [
-    "indir_pyirf = \"/Users/michele/Applications/ctasoft/tests/pyirf/EventDisplay/from_pyirf/irf_EventDisplay_Time50h/\"\n",
+    "# Path of the pyirf output data in the user's local setup\n",
+    "# Please, empty the indir_pyirf variable before pushing to the repo\n",
+    "indir_pyirf = \"\"\n",
     "infile_pyirf = \"irf.fits.gz\"\n",
     "\n",
     "hdul_pyirf = fits.open(f'{indir_pyirf}/{infile_pyirf}') # will be closed at the end of the notebook\n",
