Remove savefigs from notebook

--- a/notebooks/comparison_with_EventDisplay.ipynb
+++ b/notebooks/comparison_with_EventDisplay.ipynb
@@ -251,9 +251,7 @@
     "plt.xlabel(\"Reconstructed energy [TeV]\")\n",
     "plt.ylabel(rf\"$(E^2 \\cdot \\mathrm{{Flux Sensitivity}}) /$ ({unit.to_string('latex')})\")\n",
     "plt.grid(which=\"both\")\n",
-    "\n",
-    "plt.legend(loc=\"best\")\n",
-    "plt.savefig('/home/maxnoe/pyirf_sensitivity.png', dpi=300)"
+    "plt.legend()"
    ]
   },
   {
@@ -296,9 +294,7 @@
     "plt.ylabel('θ²-cut / deg²')\n",
     "plt.xlabel(r'$E_\\mathrm{reco} / \\mathrm{TeV}$')\n",
     "plt.xscale('log')\n",
-    "plt.yscale('log')\n",
-    "\n",
-    "plt.savefig('/home/maxnoe/theta2_cut.png')"
+    "plt.yscale('log')"
    ]
   },
   {
@@ -336,7 +332,7 @@
     "\n",
     "for name in ('', '_NO_CUTS', '_ONLY_GH', '_ONLY_THETA'):\n",
     "\n",
-    "    area = QTable.read('../sensitivity.fits.gz', hdu='EFFECTIVE_AREA' + name)[1:-1]\n",
+    "    area = QTable.read(pyirf_file, hdu='EFFECTIVE_AREA' + name)[1:-1]\n",
     "\n",
     "    \n",
     "    plt.errorbar(\n",
@@ -353,9 +349,6 @@
     "plt.xlabel(\"True energy / TeV\")\n",
     "plt.ylabel(\"Effective collection area / m²\")\n",
     "plt.grid(which=\"both\")\n",
-    "\n",
-    "\n",
-    "plt.legend(loc=4)\n",
     "plt.show()"
    ]
   },
@@ -403,10 +396,7 @@
     "plt.grid(which=\"both\")\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "plt.legend(loc=\"best\")\n",
-    "plt.show()"
+    "plt.legend(loc=\"best\")"
    ]
   },
   {
