--- a/notebooks/comparison_with_EventDisplay.ipynb
+++ b/notebooks/comparison_with_EventDisplay.ipynb
@@ -356,6 +356,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### PSF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "psf_table = QTable.read(pyirf_file, hdu='PSF')[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# select the only fov offset bin\n",
+    "\n",
+    "psf = psf_table['psf'][:, 0, :].to_value(1 / u.sr)\n",
+    "\n",
+    "offset_bins = np.append(psf_table['source_offset_low'], psf_table['source_offset_high'][-1])\n",
+    "phi_bins = np.linspace(0, 2 * np.pi, 1000)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Let's make a nice 2d representation of the radially symmetric PSF\n",
+    "r, phi = np.meshgrid(offset_bins.to_value(u.deg), phi_bins)\n",
+    "x = r * np.cos(phi)\n",
+    "y = r * np.sin(phi)\n",
+    "\n",
+    "\n",
+    "# look at a single energy bin\n",
+    "# repeat values for each phi bin\n",
+    "image = np.tile(psf[10], (len(phi_bins) - 1, 1))\n",
+    "plt.pcolormesh(x, y, image)\n",
+    "plt.xlim(-0.25, 0.25)\n",
+    "plt.ylim(-0.25, 0.25)\n",
+    "plt.xlabel('Distance from source x')\n",
+    "plt.ylabel('Distance from source y')\n",
+    "plt.gca().set_aspect(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# Profile\n",
+    "center = 0.5 * (offset_bins[1:] + offset_bins[:-1])\n",
+    "xerr = 0.5 * (offset_bins[1:] - offset_bins[:-1])\n",
+    "\n",
+    "for bin_id in [5, 10, 30]:\n",
+    "    plt.errorbar(\n",
+    "        center.to_value(u.deg),\n",
+    "        psf[bin_id],\n",
+    "        xerr=xerr.to_value(u.deg),\n",
+    "        ls='',\n",
+    "        label=f'Energy Bin {bin_id}'\n",
+    "    )\n",
+    "    \n",
+    "#plt.yscale('log')\n",
+    "plt.legend()\n",
+    "plt.xlim(0, 0.25)\n",
+    "plt.ylabel('PSF PDF / sr⁻¹')\n",
+    "plt.xlabel('Distance from True Source / deg')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Angular resolution\n",
     "[back to top](#Table-of-contents)"
    ]
