Update notebook and docs

--- a/docs/contribute/notebooks/comparison_with_EventDisplay.ipynb
+++ b/docs/contribute/notebooks/comparison_with_EventDisplay.ipynb
@@ -43,12 +43,16 @@
    "source": [
     "## Table of contents\n",
     "\n",
+    "* [Optimized cuts](#Optimized-cuts)\n",
+    "    - [Direction cut](#Direction-cut)\n",
+    "* [Differential sensitivity from cuts optimization](#Differential-sensitivity-from-cuts-optimization)\n",
     "* [IRFs](#IRFs)\n",
     "    - [Effective area](#Effective-area)\n",
-    "    - [Angular resolution](#Angular-resolution)\n",
-    "    - [Energy resolution](#Energy-resolution)\n",
-    "    - [Background rate](#Background-rate)\n",
-    "* [Differential sensitivity](#Differential-sensitivity)"
+    "    - [Point Spread Function](#Point-Spread-Function)\n",
+    "        + [Angular resolution](#Angular-resolution)\n",
+    "    - [Energy dispersion](#Energy-dispersion)\n",
+    "        + [Energy resolution](#Energy-resolution)\n",
+    "    - [Background rate](#Background-rate)"
    ]
   },
   {
@@ -126,7 +130,7 @@
    "source": [
     "# Path of EventDisplay IRF data in the user's local setup\n",
     "# Please, empty the indir_EventDisplay variable before pushing to the repo\n",
-    "indir = \"../data\"\n",
+    "indir = \"../data/\"\n",
     "irf_file_event_display = \"DESY.d20180113.V3.ID0_180degNIM2LST4MST4SST4SCMST4.prod3b-paranal20degs05b-NN.S.3HB9-FD.180000s.root\"\n",
     "\n",
     "irf_eventdisplay = uproot.open(os.path.join(indir, irf_file_event_display))"
@@ -172,7 +176,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Differential sensitivity\n",
+    "## Optimized cuts\n",
+    "[back to top](#Table-of-contents)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Direction cut\n",
     "[back to top](#Table-of-contents)"
    ]
   },
@@ -182,7 +194,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from astropy.table import QTable"
+    "from astropy.table import Table\n",
+    "\n",
+    "\n",
+    "theta_cut = Table.read(pyirf_file, hdu='THETA_CUTS_OPT')[1:-1]\n",
+    "\n",
+    "\n",
+    "theta_cut_ed = irf_eventdisplay['ThetaCut;1']\n",
+    "plt.errorbar(\n",
+    "    10**theta_cut_ed.edges[:-1],\n",
+    "    theta_cut_ed.values**2,\n",
+    "    xerr=np.diff(10**theta_cut_ed.edges),\n",
+    "    ls='',\n",
+    "    label='EventDisplay',\n",
+    ")\n",
+    "\n",
+    "plt.errorbar(\n",
+    "    0.5 * (theta_cut['low'] + theta_cut['high']),\n",
+    "    theta_cut['cut'].quantity.to_value(u.deg)**2,\n",
+    "    xerr=0.5 * (theta_cut['high'] - theta_cut['low']),\n",
+    "    ls='',\n",
+    "    label='pyirf',\n",
+    ")\n",
+    "\n",
+    "plt.legend()\n",
+    "plt.ylabel('θ²-cut / deg²')\n",
+    "plt.xlabel(r'$E_\\mathrm{reco} / \\mathrm{TeV}$')\n",
+    "plt.xscale('log')\n",
+    "plt.yscale('log')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Differential sensitivity from cuts optimization\n",
+    "[back to top](#Table-of-contents)"
    ]
   },
   {
@@ -192,15 +239,7 @@
    "outputs": [],
    "source": [
     "# [1:-1] removes under/overflow bin\n",
-    "sensitivity = QTable.read(pyirf_file, hdu='SENSITIVITY')[1:-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "sensitivity = QTable.read(pyirf_file, hdu='SENSITIVITY')[1:-1]\n",
     "sensitivity"
    ]
   },
@@ -258,50 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Theta Cuts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from astropy.table import Table\n",
-    "\n",
-    "\n",
-    "theta_cut = Table.read(pyirf_file, hdu='THETA_CUTS_OPT')[1:-1]\n",
-    "\n",
-    "\n",
-    "theta_cut_ed = irf_eventdisplay['ThetaCut;1']\n",
-    "plt.errorbar(\n",
-    "    10**theta_cut_ed.edges[:-1],\n",
-    "    theta_cut_ed.values**2,\n",
-    "    xerr=np.diff(10**theta_cut_ed.edges),\n",
-    "    ls='',\n",
-    "    label='EventDisplay',\n",
-    ")\n",
-    "\n",
-    "plt.errorbar(\n",
-    "    0.5 * (theta_cut['low'] + theta_cut['high']),\n",
-    "    theta_cut['cut'].quantity.to_value(u.deg)**2,\n",
-    "    xerr=0.5 * (theta_cut['high'] - theta_cut['low']),\n",
-    "    ls='',\n",
-    "    label='pyirf',\n",
-    ")\n",
-    "\n",
-    "plt.legend()\n",
-    "plt.ylabel('θ²-cut / deg²')\n",
-    "plt.xlabel(r'$E_\\mathrm{reco} / \\mathrm{TeV}$')\n",
-    "plt.xscale('log')\n",
-    "plt.yscale('log')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### IRFs\n",
+    "## IRFs\n",
     "[back to top](#Table-of-contents)"
    ]
   },
@@ -309,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Effective area\n",
+    "### Effective area\n",
     "[back to top](#Table-of-contents)"
    ]
   },
@@ -356,7 +352,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### PSF"
+    "### Point Spread Function\n",
+    "[back to top](#Table-of-contents)"
    ]
   },
   {
@@ -365,17 +362,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "psf_table = QTable.read(pyirf_file, hdu='PSF')[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "psf_table = QTable.read(pyirf_file, hdu='PSF')[0]\n",
     "# select the only fov offset bin\n",
-    "\n",
     "psf = psf_table['psf'][:, 0, :].to_value(1 / u.sr)\n",
     "\n",
     "offset_bins = np.append(psf_table['source_offset_low'], psf_table['source_offset_high'][-1])\n",
@@ -479,7 +467,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Energy Dispersion"
+    "### Energy dispersion\n",
+    "[back to top](#Table-of-contents)"
    ]
   },
   {
@@ -488,7 +477,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "edisp = QTable.read(pyirf_file, hdu='EDISP')[0]"
+    "edisp = QTable.read(pyirf_file, hdu='EDISP')[0]\n",
+    "edisp"
    ]
   },
   {
@@ -499,8 +489,6 @@
    },
    "outputs": [],
    "source": [
-    "edisp\n",
-    "\n",
     "e_bins = edisp['true_energy_low'][1:]\n",
     "migra_bins = edisp['migration_low'][1:]\n",
     "\n",
@@ -512,7 +500,9 @@
     "plt.colorbar(label='PDF Value')\n",
     "\n",
     "plt.xlabel(r'$E_\\mathrm{True} / \\mathrm{TeV}$')\n",
-    "plt.ylabel(r'$E_\\mathrm{Reco} / E_\\mathrm{True}$')"
+    "plt.ylabel(r'$E_\\mathrm{Reco} / E_\\mathrm{True}$')\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -529,21 +519,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bias_resolution = QTable.read(pyirf_file, hdu='ENERGY_BIAS_RESOLUTION')[1:-1]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Data from EventDisplay\n",
     "h = irf_eventdisplay[\"ERes\"]\n",
     "x = 0.5 * (10**h.edges[:-1] + 10**h.edges[1:])\n",
     "xerr = np.diff(10**h.edges) / 2\n",
     "y = h.values\n",
     "yerr = np.sqrt(h.variances)\n",
+    "\n",
+    "# Data from pyirf\n",
+    "bias_resolution = QTable.read(pyirf_file, hdu='ENERGY_BIAS_RESOLUTION')[1:-1]\n",
     "\n",
     "# Plot function\n",
     "plt.errorbar(x, y, xerr=xerr, yerr=yerr, ls='', label=\"EventDisplay\")\n",
@@ -570,7 +554,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Background rate\n",
+    "### Background rate\n",
     "[back to top](#Table-of-contents)"
    ]
   },
