--- a/docs/notebooks/comparison_with_EventDisplay.ipynb
+++ b/docs/notebooks/comparison_with_EventDisplay.ipynb
@@ -130,19 +130,10 @@
    "source": [
     "# Path of EventDisplay IRF data in the user's local setup\n",
     "# Please, empty the indir_EventDisplay variable before pushing to the repo\n",
-    "indir = \"../data/\"\n",
+    "indir = \"../../data/\"\n",
     "irf_file_event_display = \"DESY.d20180113.V3.ID0_180degNIM2LST4MST4SST4SCMST4.prod3b-paranal20degs05b-NN.S.3HB9-FD.180000s.root\"\n",
     "\n",
     "irf_eventdisplay = uproot.open(os.path.join(indir, irf_file_event_display))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "nbsphinx": "hidden"
-   },
-   "source": [
-    "### Setup of output data"
    ]
   },
   {
@@ -169,7 +160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyirf_file = '../pyirf_eventdisplay.fits.gz'"
+    "pyirf_file = '../../pyirf_eventdisplay.fits.gz'"
    ]
   },
   {
