Simplify function return values and add io for GADF format
* pyirf functions now return psf, aeff, edisp as simple quantities
* add functions to create the gadf hdus
* adapt plotting and tests
* adapt example

Co-authored-by: Lukas Nickel <lukas.nickel@tu-dortmund.de>
Co-authored-by: Michele Peresano <michele.peresano@cea.fr>

--- a/docs/notebooks/comparison_with_EventDisplay.ipynb
+++ b/docs/notebooks/comparison_with_EventDisplay.ipynb
@@ -319,13 +319,13 @@
     "\n",
     "for name in ('', '_NO_CUTS', '_ONLY_GH', '_ONLY_THETA'):\n",
     "\n",
-    "    area = QTable.read(pyirf_file, hdu='EFFECTIVE_AREA' + name)[1:-1]\n",
+    "    area = QTable.read(pyirf_file, hdu='EFFECTIVE_AREA' + name)[0]\n",
     "\n",
     "    \n",
     "    plt.errorbar(\n",
-    "        0.5 * (area['true_energy_low'] + area['true_energy_high']).to_value(u.TeV),\n",
-    "        area['effective_area'].to_value(u.m**2),\n",
-    "        xerr=0.5 * (area['true_energy_high'] - area['true_energy_low']).to_value(u.TeV),\n",
+    "        0.5 * (area['ENERG_LO'] + area['ENERG_HI']).to_value(u.TeV)[1:-1],\n",
+    "        area['EFFAREA'].to_value(u.m**2)[1:-1, 0],\n",
+    "        xerr=0.5 * (area['ENERG_LO'] - area['ENERG_HI']).to_value(u.TeV)[1:-1],\n",
     "        ls='',\n",
     "        label='pyirf ' + name,\n",
     "    )\n",
@@ -336,7 +336,17 @@
     "plt.xlabel(\"True energy / TeV\")\n",
     "plt.ylabel(\"Effective collection area / m²\")\n",
     "plt.grid(which=\"both\")\n",
+    "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "QTable.read(pyirf_file, hdu='EFFECTIVE_AREA')"
    ]
   },
   {
@@ -355,9 +365,9 @@
    "source": [
     "psf_table = QTable.read(pyirf_file, hdu='PSF')[0]\n",
     "# select the only fov offset bin\n",
-    "psf = psf_table['psf'][:, 0, :].to_value(1 / u.sr)\n",
+    "psf = psf_table['RPSF'][:, 0, :].to_value(1 / u.sr)\n",
     "\n",
-    "offset_bins = np.append(psf_table['source_offset_low'], psf_table['source_offset_high'][-1])\n",
+    "offset_bins = np.append(psf_table['RAD_LO'], psf_table['RAD_HI'][-1])\n",
     "phi_bins = np.linspace(0, 2 * np.pi, 1000)\n",
     "\n",
     "\n",
@@ -468,7 +478,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "edisp = QTable.read(pyirf_file, hdu='EDISP')[0]\n",
+    "edisp = QTable.read(pyirf_file, hdu='ENERGY_DISPERSION')[0]\n",
     "edisp"
    ]
   },
@@ -480,11 +490,11 @@
    },
    "outputs": [],
    "source": [
-    "e_bins = edisp['true_energy_low'][1:]\n",
-    "migra_bins = edisp['migration_low'][1:]\n",
+    "e_bins = edisp['ENERG_LO'][1:]\n",
+    "migra_bins = edisp['MIGRA_LO'][1:]\n",
     "\n",
     "plt.title('pyirf')\n",
-    "plt.pcolormesh(e_bins.to_value(u.TeV), migra_bins, edisp['energy_dispersion'][1:-1, 1:-1, 0].T, cmap='inferno')\n",
+    "plt.pcolormesh(e_bins.to_value(u.TeV), migra_bins, edisp['MATRIX'][1:-1, 1:-1, 0].T, cmap='inferno')\n",
     "\n",
     "plt.xscale('log')\n",
     "plt.yscale('log')\n",
