Fix handling of pointing position

--- a/docs/notebooks/comparison_with_EventDisplay.ipynb
+++ b/docs/notebooks/comparison_with_EventDisplay.ipynb
@@ -216,6 +216,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from astropy.table import QTable\n",
+    "\n",
+    "\n",
+    "gh_cut = QTable.read(pyirf_file, hdu='GH_CUTS')[1:-1]\n",
+    "\n",
+    "\n",
+    "plt.errorbar(\n",
+    "    0.5 * (gh_cut['low'] + gh_cut['high']).to_value(u.TeV),\n",
+    "    gh_cut['cut'],\n",
+    "    xerr=0.5 * (gh_cut['high'] - gh_cut['low']).to_value(u.TeV),\n",
+    "    ls='',\n",
+    "    label='pyirf',\n",
+    ")\n",
+    "\n",
+    "plt.legend()\n",
+    "plt.ylabel('θ²-cut / deg²')\n",
+    "plt.xlabel(r'$E_\\mathrm{reco} / \\mathrm{TeV}$')\n",
+    "plt.xscale('log')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -338,15 +364,6 @@
     "plt.grid(which=\"both\")\n",
     "plt.legend()\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "QTable.read(pyirf_file, hdu='EFFECTIVE_AREA')"
    ]
   },
   {
