--- a/docs/notebooks/comparison_with_EventDisplay.ipynb
+++ b/docs/notebooks/comparison_with_EventDisplay.ipynb
@@ -236,7 +236,7 @@
     ")\n",
     "\n",
     "plt.legend()\n",
-    "plt.ylabel('θ²-cut / deg²')\n",
+    "plt.ylabel('G/H-cut')\n",
     "plt.xlabel(r'$E_\\mathrm{reco} / \\mathrm{TeV}$')\n",
     "plt.xscale('log')"
    ]
@@ -397,13 +397,20 @@
     "\n",
     "# look at a single energy bin\n",
     "# repeat values for each phi bin\n",
-    "image = np.tile(psf[10], (len(phi_bins) - 1, 1))\n",
-    "plt.pcolormesh(x, y, image)\n",
-    "plt.xlim(-0.25, 0.25)\n",
-    "plt.ylim(-0.25, 0.25)\n",
-    "plt.xlabel('Distance from source x')\n",
-    "plt.ylabel('Distance from source y')\n",
-    "plt.gca().set_aspect(1)"
+    "center = 0.5 * (psf_table['ENERG_LO'] + psf_table['ENERG_HI'])\n",
+    "fig, axs = plt.subplots(1, 3)\n",
+    "\n",
+    "for bin_id, ax in zip([10, 20, 30], axs):\n",
+    "    image = np.tile(psf[bin_id], (len(phi_bins) - 1, 1))\n",
+    "    \n",
+    "    ax.set_title(f'PSF @ {center[bin_id]:.2f} TeV')\n",
+    "    ax.pcolormesh(x, y, image)\n",
+    "   \n",
+    "    ax.set_xlim(-0.25, 0.25)\n",
+    "    ax.set_ylim(-0.25, 0.25)\n",
+    "    ax.set_xlabel('Distance from source x')\n",
+    "    ax.set_ylabel('Distance from source y')\n",
+    "    ax.set_aspect(1)"
    ]
   },
   {
@@ -518,9 +525,7 @@
     "plt.colorbar(label='PDF Value')\n",
     "\n",
     "plt.xlabel(r'$E_\\mathrm{True} / \\mathrm{TeV}$')\n",
-    "plt.ylabel(r'$E_\\mathrm{Reco} / E_\\mathrm{True}$')\n",
-    "\n",
-    "plt.show()"
+    "plt.ylabel(r'$E_\\mathrm{Reco} / E_\\mathrm{True}$')"
    ]
   },
   {
