--- a/docs/notebooks/comparison_with_EventDisplay.ipynb
+++ b/docs/notebooks/comparison_with_EventDisplay.ipynb
@@ -385,32 +385,33 @@
     "psf = psf_table['RPSF'][:, 0, :].to_value(1 / u.sr)\n",
     "\n",
     "offset_bins = np.append(psf_table['RAD_LO'], psf_table['RAD_HI'][-1])\n",
-    "phi_bins = np.linspace(0, 2 * np.pi, 1000)\n",
+    "phi_bins = np.linspace(0, 2 * np.pi, 100)\n",
     "\n",
     "\n",
     "\n",
     "# Let's make a nice 2d representation of the radially symmetric PSF\n",
     "r, phi = np.meshgrid(offset_bins.to_value(u.deg), phi_bins)\n",
-    "x = r * np.cos(phi)\n",
-    "y = r * np.sin(phi)\n",
-    "\n",
     "\n",
     "# look at a single energy bin\n",
     "# repeat values for each phi bin\n",
     "center = 0.5 * (psf_table['ENERG_LO'] + psf_table['ENERG_HI'])\n",
-    "fig, axs = plt.subplots(1, 3)\n",
+    "\n",
+    "\n",
+    "fig = plt.figure(figsize=(15, 5))\n",
+    "axs = [fig.add_subplot(1, 3, i, projection='polar') for i in range(1, 4)]\n",
+    "\n",
+    "from scipy.ndimage import gaussian_filter\n",
+    "\n",
     "\n",
     "for bin_id, ax in zip([10, 20, 30], axs):\n",
     "    image = np.tile(psf[bin_id], (len(phi_bins) - 1, 1))\n",
     "    \n",
     "    ax.set_title(f'PSF @ {center[bin_id]:.2f} TeV')\n",
-    "    ax.pcolormesh(x, y, image)\n",
-    "   \n",
-    "    ax.set_xlim(-0.25, 0.25)\n",
-    "    ax.set_ylim(-0.25, 0.25)\n",
-    "    ax.set_xlabel('Distance from source x')\n",
-    "    ax.set_ylabel('Distance from source y')\n",
-    "    ax.set_aspect(1)"
+    "    ax.pcolormesh(phi, r, image)\n",
+    "    ax.set_ylim(0, 0.25)\n",
+    "    ax.set_aspect(1)\n",
+    "    \n",
+    "fig.tight_layout()"
    ]
   },
   {
@@ -425,7 +426,7 @@
     "center = 0.5 * (offset_bins[1:] + offset_bins[:-1])\n",
     "xerr = 0.5 * (offset_bins[1:] - offset_bins[:-1])\n",
     "\n",
-    "for bin_id in [5, 10, 30]:\n",
+    "for bin_id in [10, 20, 30]:\n",
     "    plt.errorbar(\n",
     "        center.to_value(u.deg),\n",
     "        psf[bin_id],\n",
@@ -499,21 +500,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "edisp = QTable.read(pyirf_file, hdu='ENERGY_DISPERSION')[0]\n",
-    "edisp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
+    "edisp = QTable.read(pyirf_file, hdu='ENERGY_DISPERSION')[0]\n",
+    "\n",
     "e_bins = edisp['ENERG_LO'][1:]\n",
     "migra_bins = edisp['MIGRA_LO'][1:]\n",
     "\n",
