Remove mpl clutter from notebook cell output

--- a/docs/notebooks/comparison_with_EventDisplay.ipynb
+++ b/docs/notebooks/comparison_with_EventDisplay.ipynb
@@ -212,7 +212,9 @@
     "plt.ylabel('θ²-cut / deg²')\n",
     "plt.xlabel(r'$E_\\mathrm{reco} / \\mathrm{TeV}$')\n",
     "plt.xscale('log')\n",
-    "plt.yscale('log')"
+    "plt.yscale('log')\n",
+    "\n",
+    "None # to remove clutter by mpl objects"
    ]
   },
   {
@@ -238,7 +240,9 @@
     "plt.legend()\n",
     "plt.ylabel('G/H-cut')\n",
     "plt.xlabel(r'$E_\\mathrm{reco} / \\mathrm{TeV}$')\n",
-    "plt.xscale('log')"
+    "plt.xscale('log')\n",
+    "\n",
+    "None # to remove clutter by mpl objects"
    ]
   },
   {
@@ -307,7 +311,9 @@
     "plt.xlabel(\"Reconstructed energy [TeV]\")\n",
     "plt.ylabel(rf\"$(E^2 \\cdot \\mathrm{{Flux Sensitivity}}) /$ ({unit.to_string('latex')})\")\n",
     "plt.grid(which=\"both\")\n",
-    "plt.legend()"
+    "plt.legend()\n",
+    "\n",
+    "None # to remove clutter by mpl objects"
    ]
   },
   {
@@ -363,7 +369,8 @@
     "plt.ylabel(\"Effective collection area / m²\")\n",
     "plt.grid(which=\"both\")\n",
     "plt.legend()\n",
-    "plt.show()"
+    "\n",
+    "None # to remove clutter by mpl objects"
    ]
   },
   {
@@ -400,8 +407,6 @@
     "fig = plt.figure(figsize=(15, 5))\n",
     "axs = [fig.add_subplot(1, 3, i, projection='polar') for i in range(1, 4)]\n",
     "\n",
-    "from scipy.ndimage import gaussian_filter\n",
-    "\n",
     "\n",
     "for bin_id, ax in zip([10, 20, 30], axs):\n",
     "    image = np.tile(psf[bin_id], (len(phi_bins) - 1, 1))\n",
@@ -411,7 +416,9 @@
     "    ax.set_ylim(0, 0.25)\n",
     "    ax.set_aspect(1)\n",
     "    \n",
-    "fig.tight_layout()"
+    "fig.tight_layout()\n",
+    "\n",
+    "None # to remove clutter by mpl objects"
    ]
   },
   {
@@ -439,7 +446,9 @@
     "plt.legend()\n",
     "plt.xlim(0, 0.25)\n",
     "plt.ylabel('PSF PDF / sr⁻¹')\n",
-    "plt.xlabel('Distance from True Source / deg')"
+    "plt.xlabel('Distance from True Source / deg')\n",
+    "\n",
+    "None # to remove clutter by mpl objects"
    ]
   },
   {
@@ -481,12 +490,13 @@
     "plt.xlim(1.e-2, 2.e2)\n",
     "plt.ylim(2.e-2, 1)\n",
     "plt.xscale(\"log\")\n",
+    "plt.yscale(\"log\")\n",
     "plt.xlabel(\"True energy / TeV\")\n",
     "plt.ylabel(\"Angular Resolution / deg\")\n",
     "plt.grid(which=\"both\")\n",
+    "plt.legend(loc=\"best\")\n",
     "\n",
-    "\n",
-    "plt.legend(loc=\"best\")"
+    "None # to remove clutter by mpl objects"
    ]
   },
   {
@@ -518,7 +528,9 @@
     "plt.colorbar(label='PDF Value')\n",
     "\n",
     "plt.xlabel(r'$E_\\mathrm{True} / \\mathrm{TeV}$')\n",
-    "plt.ylabel(r'$E_\\mathrm{Reco} / E_\\mathrm{True}$')"
+    "plt.ylabel(r'$E_\\mathrm{Reco} / E_\\mathrm{True}$')\n",
+    "\n",
+    "None # to remove clutter by mpl objects"
    ]
   },
   {
@@ -560,10 +572,9 @@
     "plt.xlabel(r\"$E_\\mathrm{True} / \\mathrm{TeV}$\")\n",
     "plt.ylabel(\"Energy resolution\")\n",
     "plt.grid(which=\"both\")\n",
-    "\n",
-    "\n",
     "plt.legend(loc=\"best\")\n",
-    "plt.show()"
+    "\n",
+    "None # to remove clutter by mpl objects"
    ]
   },
   {
@@ -596,7 +607,8 @@
     "# Plot function\n",
     "plt.errorbar(x, y, xerr=xerr, yerr=yerr, fmt=\"o\", label=\"EventDisplay\")\n",
     "plt.legend(loc=\"best\")\n",
-    "plt.show()"
+    "\n",
+    "None # to remove clutter by mpl objects"
    ]
   }
  ],
