Transpose irf arrays when writing to fits to match GADF order, add test reading IRFs with gammapy

--- a/docs/notebooks/comparison_with_EventDisplay.ipynb
+++ b/docs/notebooks/comparison_with_EventDisplay.ipynb
@@ -182,13 +182,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "from astropy.table import Table\n",
+    "from astropy.table import QTable\n",
     "\n",
     "\n",
-    "theta_cut = Table.read(pyirf_file, hdu='THETA_CUTS_OPT')[1:-1]\n",
+    "rad_max = QTable.read(pyirf_file, hdu='RAD_MAX')[0]\n",
     "\n",
     "\n",
     "theta_cut_ed = irf_eventdisplay['ThetaCut;1']\n",
@@ -201,9 +203,9 @@
     ")\n",
     "\n",
     "plt.errorbar(\n",
-    "    0.5 * (theta_cut['low'] + theta_cut['high']),\n",
-    "    theta_cut['cut'].quantity.to_value(u.deg)**2,\n",
-    "    xerr=0.5 * (theta_cut['high'] - theta_cut['low']),\n",
+    "    0.5 * (rad_max['ENERG_LO'] + rad_max['ENERG_HI'])[1:-1].to_value(u.TeV),\n",
+    "    rad_max['RAD_MAX'].T[1:-1, 0].to_value(u.deg)**2,\n",
+    "    xerr=0.5 * (rad_max['ENERG_HI'] - rad_max['ENERG_LO'])[1:-1].to_value(u.TeV),\n",
     "    ls='',\n",
     "    label='pyirf',\n",
     ")\n",
@@ -356,7 +358,7 @@
     "    \n",
     "    plt.errorbar(\n",
     "        0.5 * (area['ENERG_LO'] + area['ENERG_HI']).to_value(u.TeV)[1:-1],\n",
-    "        area['EFFAREA'].to_value(u.m**2)[1:-1, 0],\n",
+    "        area['EFFAREA'].to_value(u.m**2).T[1:-1, 0],\n",
     "        xerr=0.5 * (area['ENERG_LO'] - area['ENERG_HI']).to_value(u.TeV)[1:-1],\n",
     "        ls='',\n",
     "        label='pyirf ' + name,\n",
@@ -389,7 +391,7 @@
    "source": [
     "psf_table = QTable.read(pyirf_file, hdu='PSF')[0]\n",
     "# select the only fov offset bin\n",
-    "psf = psf_table['RPSF'][:, 0, :].to_value(1 / u.sr)\n",
+    "psf = psf_table['RPSF'].T[:, 0, :].to_value(1 / u.sr)\n",
     "\n",
     "offset_bins = np.append(psf_table['RAD_LO'], psf_table['RAD_HI'][-1])\n",
     "phi_bins = np.linspace(0, 2 * np.pi, 100)\n",
@@ -521,7 +523,7 @@
     "migra_bins = edisp['MIGRA_LO'][1:]\n",
     "\n",
     "plt.title('pyirf')\n",
-    "plt.pcolormesh(e_bins.to_value(u.TeV), migra_bins, edisp['MATRIX'][1:-1, 1:-1, 0].T, cmap='inferno')\n",
+    "plt.pcolormesh(e_bins.to_value(u.TeV), migra_bins, edisp['MATRIX'].T[1:-1, 1:-1, 0].T, cmap='inferno')\n",
     "\n",
     "plt.xscale('log')\n",
     "plt.yscale('log')\n",
