Fix binning in notebook

--- a/docs/notebooks/comparison_with_EventDisplay.ipynb
+++ b/docs/notebooks/comparison_with_EventDisplay.ipynb
@@ -624,13 +624,14 @@
     "\n",
     "\n",
     "# Plot function\n",
-    "plt.errorbar(x, y, xerr=xerr, yerr=yerr, fmt=\"o\", label=\"EventDisplay\")\n",
+    "plt.errorbar(x, y, xerr=xerr, yerr=yerr, ls='', label=\"EventDisplay\")\n",
     "\n",
     "plt.errorbar(\n",
-    "    0.5 * (bg_rate['ENERG_LO'] + bg_rate['ENERG_HI']).to_value(u.TeV),\n",
-    "    rate_bin.to_value(u.s**-1),\n",
-    "    xerr=np.diff(reco_bins).to_value(u.TeV),\n",
+    "    0.5 * (bg_rate['ENERG_LO'] + bg_rate['ENERG_HI']).to_value(u.TeV)[1:-1],\n",
+    "    rate_bin.to_value(u.s**-1)[1:-1],\n",
+    "    xerr=np.diff(reco_bins).to_value(u.TeV)[1:-1] / 2,\n",
     "    ls='',\n",
+    "    label='pyirf',\n",
     ")\n",
     "\n",
     "# Style settings\n",
