Implement background estimation as done in EventDisplay

--- a/docs/notebooks/comparison_with_EventDisplay.ipynb
+++ b/docs/notebooks/comparison_with_EventDisplay.ipynb
@@ -598,8 +598,9 @@
     "# Data from EventDisplay\n",
     "h = irf_eventdisplay[\"BGRate\"]\n",
     "x = 0.5 * (10**h.edges[:-1] + 10**h.edges[1:])\n",
-    "xerr = np.diff(10**h.edges) / 2\n",
-    "y = h.values\n",
+    "width = np.diff(10**h.edges)\n",
+    "xerr = width / 2\n",
+    "y = h.values / width\n",
     "yerr = np.sqrt(h.variances)\n",
     "\n",
     "# pyirf data\n",
@@ -620,7 +621,6 @@
     "\n",
     "# undo normalization\n",
     "rate_bin *= cone_solid_angle(theta_cut)\n",
-    "rate_bin *= np.diff(reco_bins)\n",
     "\n",
     "\n",
     "# Plot function\n",
@@ -628,7 +628,7 @@
     "\n",
     "plt.errorbar(\n",
     "    0.5 * (bg_rate['ENERG_LO'] + bg_rate['ENERG_HI']).to_value(u.TeV)[1:-1],\n",
-    "    rate_bin.to_value(u.s**-1)[1:-1],\n",
+    "    rate_bin.to_value(1 / (u.TeV * u.s))[1:-1],\n",
     "    xerr=np.diff(reco_bins).to_value(u.TeV)[1:-1] / 2,\n",
     "    ls='',\n",
     "    label='pyirf',\n",
@@ -637,13 +637,20 @@
     "# Style settings\n",
     "plt.xscale(\"log\")\n",
     "plt.xlabel(r\"$E_\\mathrm{Reco} / \\mathrm{TeV}$\")\n",
-    "plt.ylabel(\"Background rate / s⁻¹\")\n",
+    "plt.ylabel(\"Background rate / (s⁻¹ TeV⁻¹) \")\n",
     "plt.grid(which=\"both\")\n",
     "plt.legend(loc=\"best\")\n",
     "plt.yscale('log')\n",
     "\n",
     "None # to remove clutter by mpl objects"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
