Add ratio to effective area

--- a/docs/notebooks/comparison_with_EventDisplay.ipynb
+++ b/docs/notebooks/comparison_with_EventDisplay.ipynb
@@ -349,28 +349,44 @@
     "y = h.values\n",
     "yerr = np.sqrt(h.variances)\n",
     "\n",
-    "plt.errorbar(x, y, xerr=xerr, yerr=yerr, ls='', label=\"EventDisplay\")\n",
     "\n",
-    "for name in ('', '_NO_CUTS', '_ONLY_GH', '_ONLY_THETA'):\n",
+    "fig, (ax_area, ax_ratio) = plt.subplots(2, 1, gridspec_kw={'height_ratios': [3.0, 1.0]}, sharex=True)\n",
     "\n",
+    "ax_area.errorbar(x, y, xerr=xerr, yerr=yerr, ls='', label=\"EventDisplay\")\n",
+    "\n",
+    "for i, name in enumerate(('', '_NO_CUTS', '_ONLY_GH', '_ONLY_THETA'), start=1):\n",
     "    area = QTable.read(pyirf_file, hdu='EFFECTIVE_AREA' + name)[0]\n",
-    "\n",
+    "    effarea = area['EFFAREA'].to_value(u.m**2).T[1:-1, 0]\n",
     "    \n",
-    "    plt.errorbar(\n",
+    "    ax_area.errorbar(\n",
     "        0.5 * (area['ENERG_LO'] + area['ENERG_HI']).to_value(u.TeV)[1:-1],\n",
-    "        area['EFFAREA'].to_value(u.m**2).T[1:-1, 0],\n",
+    "        effarea,\n",
     "        xerr=0.5 * (area['ENERG_LO'] - area['ENERG_HI']).to_value(u.TeV)[1:-1],\n",
     "        ls='',\n",
     "        label='pyirf ' + name,\n",
+    "        color=f'C{i}'\n",
     "    )\n",
+    "    if name == '':\n",
+    "        ax_ratio.errorbar(x, effarea / y, xerr=xerr, color=f'C{i}', ls='')\n",
     "\n",
     "# Style settings\n",
-    "plt.xscale(\"log\")\n",
-    "plt.yscale(\"log\")\n",
-    "plt.xlabel(\"True energy / TeV\")\n",
-    "plt.ylabel(\"Effective collection area / m²\")\n",
-    "plt.grid(which=\"both\")\n",
-    "plt.legend()\n",
+    "\n",
+    "ax_ratio.set_xlabel(\"True energy / TeV\")\n",
+    "ax_ratio.set_ylim(0.5, 2)\n",
+    "\n",
+    "ax_area.legend()\n",
+    "ax_area.set_ylabel(\"Effective collection area / m²\")\n",
+    "\n",
+    "for ax in (ax_area, ax_ratio):\n",
+    "    ax.set_yscale(\"log\")\n",
+    "    ax.set_xscale(\"log\")\n",
+    "    ax.grid()\n",
+    "    \n",
+    "    \n",
+    "from matplotlib.ticker import ScalarFormatter\n",
+    "ax_ratio.set_yticks([0.5, 1, 2])\n",
+    "ax_ratio.yaxis.set_major_formatter(ScalarFormatter())\n",
+    "ax_ratio.set_ylabel('pyirf / eventdisplay')\n",
     "\n",
     "None # to remove clutter by mpl objects"
    ]
