Improve comparison to EventDisplay
* Do not require at least 10 weighted bg events
* Use correct IRF for comparison (before 180d Az, now both merged)
* Calculate background rate in same bin

--- a/docs/notebooks/comparison_with_EventDisplay.ipynb
+++ b/docs/notebooks/comparison_with_EventDisplay.ipynb
@@ -131,7 +131,7 @@
     "# Path of EventDisplay IRF data in the user's local setup\n",
     "# Please, empty the indir_EventDisplay variable before pushing to the repo\n",
     "indir = \"../../data/\"\n",
-    "irf_file_event_display = \"DESY.d20180113.V3.ID0_180degNIM2LST4MST4SST4SCMST4.prod3b-paranal20degs05b-NN.S.3HB9-FD.180000s.root\"\n",
+    "irf_file_event_display = \"DESY.d20180113.V3.ID0NIM2LST4MST4SST4SCMST4.prod3b-paranal20degs05b-NN.S.3HB9-FD.180000s.root\"\n",
     "\n",
     "irf_eventdisplay = uproot.open(os.path.join(indir, irf_file_event_display))"
    ]
@@ -600,7 +600,7 @@
     "x = 0.5 * (10**h.edges[:-1] + 10**h.edges[1:])\n",
     "width = np.diff(10**h.edges)\n",
     "xerr = width / 2\n",
-    "y = h.values / width\n",
+    "y = h.values\n",
     "yerr = np.sqrt(h.variances)\n",
     "\n",
     "# pyirf data\n",
@@ -621,6 +621,7 @@
     "\n",
     "# undo normalization\n",
     "rate_bin *= cone_solid_angle(theta_cut)\n",
+    "rate_bin *= np.diff(reco_bins)\n",
     "\n",
     "\n",
     "# Plot function\n",
@@ -628,7 +629,7 @@
     "\n",
     "plt.errorbar(\n",
     "    0.5 * (bg_rate['ENERG_LO'] + bg_rate['ENERG_HI']).to_value(u.TeV)[1:-1],\n",
-    "    rate_bin.to_value(1 / (u.TeV * u.s))[1:-1],\n",
+    "    rate_bin.to_value(1 / u.s)[1:-1],\n",
     "    xerr=np.diff(reco_bins).to_value(u.TeV)[1:-1] / 2,\n",
     "    ls='',\n",
     "    label='pyirf',\n",
