--- a/docs/notebooks/comparison_with_EventDisplay.ipynb
+++ b/docs/notebooks/comparison_with_EventDisplay.ipynb
@@ -78,6 +78,7 @@
     "import astropy.units as u\n",
     "import matplotlib.pyplot as plt\n",
     "from astropy.table import QTable\n",
+    "from matplotlib.ticker import ScalarFormatter\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -281,7 +282,14 @@
     "width = np.diff(bins)\n",
     "y = h.values\n",
     "\n",
-    "plt.errorbar(\n",
+    "\n",
+    "fig, (ax_sens, ax_ratio) = plt.subplots(\n",
+    "    2, 1,\n",
+    "    gridspec_kw={'height_ratios': [4, 1]},\n",
+    "    sharex=True,\n",
+    ")\n",
+    "\n",
+    "ax_sens.errorbar(\n",
     "    x,\n",
     "    y, \n",
     "    xerr=width/2,\n",
@@ -295,25 +303,40 @@
     "\n",
     "e = sensitivity['reco_energy_center']\n",
     "s = (e**2 * sensitivity['flux_sensitivity'])\n",
+    "w = (sensitivity['reco_energy_high'] - sensitivity['reco_energy_low'])\n",
     "\n",
-    "plt.errorbar(\n",
+    "ax_sens.errorbar(\n",
     "    e.to_value(u.TeV),\n",
     "    s.to_value(unit),\n",
-    "    xerr=(sensitivity['reco_energy_high'] - sensitivity['reco_energy_low']).to_value(u.TeV) / 2,\n",
+    "    xerr=w.to_value(u.TeV) / 2,\n",
     "    ls='',\n",
     "    label='pyirf'\n",
     ")\n",
     "\n",
+    "ax_ratio.errorbar(\n",
+    "    e.to_value(u.TeV), s.to_value(unit) / y,\n",
+    "    xerr=w.to_value(u.TeV)/2,\n",
+    "    ls=''\n",
+    ")\n",
+    "ax_ratio.set_yscale('log')\n",
+    "ax_ratio.set_xlabel(\"Reconstructed energy / TeV\")\n",
+    "ax_ratio.set_ylabel('pyirf / eventdisplay')\n",
+    "ax_ratio.grid()\n",
+    "ax_ratio.yaxis.set_major_formatter(ScalarFormatter())\n",
     "\n",
+    "ax_ratio.set_ylim(0.2, 5.0)\n",
+    "ax_ratio.set_yticks([0.2, 0.5, 1, 2, 5])\n",
+    "ax_ratio.set_yticks([], minor=True)\n",
     "\n",
     "# Style settings\n",
-    "plt.title('Minimal Flux Needed for 5σ Detection in 50 hours')\n",
-    "plt.xscale(\"log\")\n",
-    "plt.yscale(\"log\")\n",
-    "plt.xlabel(\"Reconstructed energy [TeV]\")\n",
-    "plt.ylabel(rf\"$(E^2 \\cdot \\mathrm{{Flux Sensitivity}}) /$ ({unit.to_string('latex')})\")\n",
-    "plt.grid(which=\"both\")\n",
-    "plt.legend()\n",
+    "ax_sens.set_title('Minimal Flux Needed for 5σ Detection in 50 hours')\n",
+    "ax_sens.set_xscale(\"log\")\n",
+    "ax_sens.set_yscale(\"log\")\n",
+    "ax_sens.set_ylabel(rf\"$(E^2 \\cdot \\mathrm{{Flux Sensitivity}}) /$ ({unit.to_string('latex')})\")\n",
+    "\n",
+    "ax_sens.grid(which=\"both\")\n",
+    "ax_sens.legend()\n",
+    "fig.tight_layout(h_pad=0)\n",
     "\n",
     "None # to remove clutter by mpl objects"
    ]
