Plot theta cut (not squared) and improve readability of table

--- a/docs/notebooks/comparison_with_EventDisplay.ipynb
+++ b/docs/notebooks/comparison_with_EventDisplay.ipynb
@@ -197,7 +197,7 @@
     "theta_cut_ed = irf_eventdisplay['ThetaCut;1']\n",
     "plt.errorbar(\n",
     "    10**theta_cut_ed.edges[:-1],\n",
-    "    theta_cut_ed.values**2,\n",
+    "    theta_cut_ed.values,\n",
     "    xerr=np.diff(10**theta_cut_ed.edges),\n",
     "    ls='',\n",
     "    label='EventDisplay',\n",
@@ -205,17 +205,16 @@
     "\n",
     "plt.errorbar(\n",
     "    0.5 * (rad_max['ENERG_LO'] + rad_max['ENERG_HI'])[1:-1].to_value(u.TeV),\n",
-    "    rad_max['RAD_MAX'].T[1:-1, 0].to_value(u.deg)**2,\n",
+    "    rad_max['RAD_MAX'].T[1:-1, 0].to_value(u.deg),\n",
     "    xerr=0.5 * (rad_max['ENERG_HI'] - rad_max['ENERG_LO'])[1:-1].to_value(u.TeV),\n",
     "    ls='',\n",
     "    label='pyirf',\n",
     ")\n",
     "\n",
     "plt.legend()\n",
-    "plt.ylabel('θ²-cut / deg²')\n",
+    "plt.ylabel('θ-cut / deg²')\n",
     "plt.xlabel(r'$E_\\mathrm{reco} / \\mathrm{TeV}$')\n",
     "plt.xscale('log')\n",
-    "plt.yscale('log')\n",
     "\n",
     "None # to remove clutter by mpl objects"
    ]
@@ -262,8 +261,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# [1:-1] removes under/overflow bin\n",
+    "# [1:-1] removes under/overflow bins\n",
     "sensitivity = QTable.read(pyirf_file, hdu='SENSITIVITY')[1:-1]\n",
+    "\n",
+    "# make it print nice\n",
+    "sensitivity['reco_energy_low'].info.format = '.3g'\n",
+    "sensitivity['reco_energy_high'].info.format = '.3g'\n",
+    "sensitivity['reco_energy_center'].info.format = '.3g'\n",
+    "sensitivity['n_signal_weighted'].info.format = '.1f'\n",
+    "sensitivity['n_background_weighted'].info.format = '.1f'\n",
+    "sensitivity['n_background'].info.format = '.1f'\n",
+    "sensitivity['relative_sensitivity'].info.format = '.2g'\n",
+    "sensitivity['flux_sensitivity'].info.format = '.3g'\n",
+    "\n",
+    "\n",
     "sensitivity"
    ]
   },
@@ -281,7 +292,7 @@
     "x = 0.5 * (bins[:-1] + bins[1:])\n",
     "width = np.diff(bins)\n",
     "y = h.values\n",
-    "\n",
+    "yerr = np.sqrt(h.variances)\n",
     "\n",
     "fig, (ax_sens, ax_ratio) = plt.subplots(\n",
     "    2, 1,\n",
@@ -293,7 +304,7 @@
     "    x,\n",
     "    y, \n",
     "    xerr=width/2,\n",
-    "    yerr=None,\n",
+    "    yerr=yerr,\n",
     "    label=\"EventDisplay\",\n",
     "    ls=''\n",
     ")\n",
