--- a/docs/notebooks/comparison_with_EventDisplay.ipynb
+++ b/docs/notebooks/comparison_with_EventDisplay.ipynb
@@ -268,6 +268,7 @@
     "sensitivity['reco_energy_low'].info.format = '.3g'\n",
     "sensitivity['reco_energy_high'].info.format = '.3g'\n",
     "sensitivity['reco_energy_center'].info.format = '.3g'\n",
+    "sensitivity['n_signal'].info.format = '.1f'\n",
     "sensitivity['n_signal_weighted'].info.format = '.1f'\n",
     "sensitivity['n_background_weighted'].info.format = '.1f'\n",
     "sensitivity['n_background'].info.format = '.1f'\n",
@@ -679,13 +680,6 @@
     "\n",
     "None # to remove clutter by mpl objects"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -704,7 +698,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
