--- a/docs/notebooks/comparison_with_EventDisplay.ipynb
+++ b/docs/notebooks/comparison_with_EventDisplay.ipynb
@@ -268,13 +268,11 @@
     "sensitivity['reco_energy_low'].info.format = '.3g'\n",
     "sensitivity['reco_energy_high'].info.format = '.3g'\n",
     "sensitivity['reco_energy_center'].info.format = '.3g'\n",
-    "sensitivity['n_signal'].info.format = '.1f'\n",
-    "sensitivity['n_signal_weighted'].info.format = '.1f'\n",
-    "sensitivity['n_background_weighted'].info.format = '.1f'\n",
-    "sensitivity['n_background'].info.format = '.1f'\n",
     "sensitivity['relative_sensitivity'].info.format = '.2g'\n",
     "sensitivity['flux_sensitivity'].info.format = '.3g'\n",
     "\n",
+    "for k in filter(lambda k: k.startswith('n_'), sensitivity.colnames):\n",
+    "    sensitivity[k].info.format = '.1f'\n",
     "\n",
     "sensitivity"
    ]
@@ -314,8 +312,9 @@
     "\n",
     "\n",
     "e = sensitivity['reco_energy_center']\n",
-    "s = (e**2 * sensitivity['flux_sensitivity'])\n",
     "w = (sensitivity['reco_energy_high'] - sensitivity['reco_energy_low'])\n",
+    "s = (e**2 * sensitivity['flux_sensitivity'])\n",
+    "\n",
     "\n",
     "ax_sens.errorbar(\n",
     "    e.to_value(u.TeV),\n",
@@ -698,7 +697,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
