--- a/docs/notebooks/comparison_with_EventDisplay.ipynb
+++ b/docs/notebooks/comparison_with_EventDisplay.ipynb
@@ -335,8 +335,8 @@
     "ax_ratio.grid()\n",
     "ax_ratio.yaxis.set_major_formatter(ScalarFormatter())\n",
     "\n",
-    "ax_ratio.set_ylim(0.2, 5.0)\n",
-    "ax_ratio.set_yticks([0.2, 0.5, 1, 2, 5])\n",
+    "ax_ratio.set_ylim(0.5, 2.0)\n",
+    "ax_ratio.set_yticks([0.5, 2/3, 1, 3/2, 2])\n",
     "ax_ratio.set_yticks([], minor=True)\n",
     "\n",
     "# Style settings\n",
